--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,25 @@
 *::before {
   font-family: "Poppins", sans-serif;
 }
+
+main {
+  perspective: 500px;
+}
+
+.card {
+  @apply absolute left-0 top-0 flex h-full w-full items-center justify-center rounded-xl shadow-md transition-all duration-500 ease-in-out;
+}
+.card.front {
+  transform: rotateX(0deg);
+}
+.card.back {
+  backface-visibility: hidden;
+  transform: rotateY(180deg);
+}
+
+.flip > .front {
+  transform: rotateY(180deg);
+}
+.flip > .back {
+  transform: rotateX(0deg);
+}
